--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awax</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+    <header>
+        <div class="header">     
+            <div class="header__img">
+                <img src="assets/images/crown.png" alt="logo">
+            </div>
+            <div class="header__menu">
+                <nav>
+                    <ul>
+                        <li><a href="home">Home</a></li>
+                        <li><a href="about-us">About Us</a></li>
+                        <li><a href="services">Services</a></li>
+                        <li><a href="our-projects">Our Projects</a></li>
+                        <li><a href="our-team">Our Team</a></li>
+                        <li><a href="happy-clients">Happy Clients</a></li>
+                        <li><a href="price">Price</a></li>
+                        <li><a href="some-facts">Some Facts</a></li>
+                        <li><a href="contact-us">Cantact Us</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <main>
+
+    </main>
     
+    <footer>
+
+    </footer>
 </body>
 </html>
