initial banner setup and creation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     </header>
 
     <main>
-
+        <section class="banner">
+            hdhdhdhd
+        </section>
     </main>
     
     <footer>
