--- a/index.html
+++ b/index.html
@@ -33,7 +33,27 @@
 
     <main>
         <section class="banner">
-            hdhdhdhd
+            <div class="banner__sliders">
+                <div class="banner__slide">
+                    <div class="slide__content">
+                        <h1>Design is about<br/> <span>Communication</span></h1>
+                        <h2>Call Us: +00 0 1234 5678</h2>
+                        <button>Get in touch!</button>
+
+                    </div>
+                </div>
+                <div class="banner__slide">
+                    ...2
+                </div>
+                <div class="banner__slide">
+                    ...3
+                </div>
+            </div>
+            <div class="banner__circles__area">
+                <div class="banner__circles"></div>
+                <div class="banner__circles"></div>
+                <div class="banner__circles"></div>
+            </div>
         </section>
     </main>
     
