--- a/index.html
+++ b/index.html
@@ -50,9 +50,23 @@
                 </div>
             </div>
             <div class="banner__circles__area">
+                <div class="banner__circles banner__circles--active"></div>
                 <div class="banner__circles"></div>
                 <div class="banner__circles"></div>
-                <div class="banner__circles"></div>
+            </div>
+        </section>
+        <section class="default default--light">
+            <div class="section__title">About US</div>
+            <div class="section__desc">Who We Are?</div>
+            <div class="section__body">
+                123
+            </div>
+        </section>
+        <section class="default default--dark">
+            <div class="section__title">About US</div>
+            <div class="section__desc">Who We Are?</div>
+            <div class="section__body">
+                123
             </div>
         </section>
     </main>
