about-us initial

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="slide__content">
                         <h1>Design is about<br/> <span>Communication</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <button>Get in touch!</button>
+                        <button class="button">Get in touch!</button>
 
                     </div>
                 </div>
@@ -54,12 +54,23 @@
                 <div class="banner__circles"></div>
                 <div class="banner__circles"></div>
             </div>
+            <div class="banner-img-contact">
+                <img src="assets/" alt="">
+            </div>
         </section>
         <section class="default default--light">
             <div class="section__title">About US</div>
             <div class="section__desc">Who We Are?</div>
             <div class="section__body">
-                123
+                <div class="section-about-us">
+                    <div class="section__left"> 
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rutrum felis tellus. Vestibulum varius ligula vitae tellus maximus gravida.      Phasellus sed magna sed justo condimentum consequat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam sed faucibus enim. Vestibulum luctus lectus nec metus fermentum, et elementum dui bibendum. Morbi mattis lectus in elit bibendum sollicitudin at at purus.</p>
+                        <button class="button button--section">Learn More</button>
+                    </div>
+                    <div class="section__right">
+                        <img src="media/watch.png" alt="">
+                    </div>
+                </div>
             </div>
         </section>
         <section class="default default--dark">
