--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="section__title">About US</div>
             <div class="section__desc">Who We Are?</div>
             <div class="section__body">
-                123
+                teste
             </div>
         </section>
     </main>
