--- a/index.html
+++ b/index.html
@@ -74,10 +74,31 @@
             </div>
         </section>
         <section class="default default--dark">
-            <div class="section__title">About US</div>
-            <div class="section__desc">Who We Are?</div>
+            <div class="section__title">Services</div>
+            <div class="section__desc">Services That We Provide</div>
             <div class="section__body">
-                teste
+                <div class="section-services">
+                    <div class="section__service">
+                        <img src="assets/images/medalha.png" alt="serveci-logo">
+                        <h4>High Quality <br/>Design</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="section__service">
+                        <img src="assets/images/estrela.png" alt="serveci-logo">
+                        <h4>Modern Design</h4>
+                        <p>Lorem ipsum dolor sit amet <br/>adipisicing elit</p>
+                    </div>
+                    <div class="section__service">
+                        <img src="assets/images/relogio.png" alt="serveci-logo">
+                        <h4>Regular <br/>Updates</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                    </div>
+                    <div class="section__service">
+                        <img src="assets/images/balao.png" alt="serveci-logo">
+                        <h4>Fast and Free <br/>Support</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elited!</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
