projects area initial

--- a/index.html
+++ b/index.html
@@ -101,6 +101,24 @@
                 </div>
             </div>
         </section>
+        <section class="default default--light">
+            <div class="section__title">Our Projects</div>
+            <div class="section__desc">What we create</div>
+            <div class="section__body">
+                <div class="section-projects">
+                    <div class="section__filters">
+                        <ul>
+                            <li>All</li>
+                            <li class="active">Photos</li>
+                            <li>Branding</li>
+                            <li>Adverts</li>
+                            <li>Development</li>
+                            <li>Misc</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
     <footer>
