projects area finished

--- a/index.html
+++ b/index.html
@@ -116,6 +116,174 @@
                             <li>Misc</li>
                         </ul>
                     </div>
+                    <div class="section__photos">
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto1.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc section__photo__desc--active">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto2.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto3.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto4.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto5.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto6.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto7.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto1.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto2.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto3.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto4.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto5.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto6.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto7.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <div class="section__photo">
+                            <div class="section__photo__area">
+                                <div class="section__photo__desc">
+                                    <a href="###">
+                                        <h5>About</h5>
+                                        <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</p>
+                                    </a>
+                                </div>
+                                <img src="media/foto4.jpg" alt="galery-photos">
+                            </div>                            
+                        </div>
+                        <button class="button button--projects">More projects</button>
+                    </div>
                 </div>
             </div>
         </section>
