--- a/index.html
+++ b/index.html
@@ -287,6 +287,17 @@
                 </div>
             </div>
         </section>
+        <section class="default default--dark team-bg">
+            <div class="section-team-area">
+                <div class="section__title">Our Team</div>
+                <div class="section__desc">Our Co-Workers</div>
+                <div class="section__body">
+                    <div class="section-team">
+                        ...
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
     <footer>
