--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                         <h1>Design is about<br/> <span>Communication</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
                         <button class="button">Get in touch!</button>
-
                     </div>
                 </div>
                 <div class="banner__slide">
@@ -293,7 +292,55 @@
                 <div class="section__desc">Our Co-Workers</div>
                 <div class="section__body">
                     <div class="section-team">
-                        ...
+                        <div class="banner__sliders">
+                            <div class="banner__slide">
+                                <div class="slide__content">
+                                    <img class="section__team__avatar" src="media/mulher1.png" alt="Jane Doe">
+                                    <div class="section__team__name">Jane Doe</div>
+                                    <div class="section__team__role">Master mind</div>
+                                    <div class="section__team__social">
+                                        <a class="active" href="###"><img src="assets/images/twitter.png" alt="twitter-icon"></a>
+                                        <a href="###"><img src="assets/images/linkedin.png" alt="linkedin-icon"></a>
+                                        <a href="###"><img src="assets/images/facebook.png" alt="facebook-icon"></a>
+                                        <a href="###"><img src="assets/images/pinterest.png" alt="pinterest-icon"></a>
+                                        <a href="###"><img src="assets/images/googleplus.png" alt="googleplus-icon"></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="banner__slide">
+                                <div class="slide__content">
+                                    <img class="section__team__avatar" src="media/homem1.png" alt="Mike Shiller">
+                                    <div class="section__team__name">Mike Shiller</div>
+                                    <div class="section__team__role">Creative head</div>
+                                    <div class="section__team__social">
+                                        <a href="###"><img src="assets/images/twitter.png" alt="twitter-icon"></a>
+                                        <a href="###"><img src="assets/images/linkedin.png" alt="linkedin-icon"></a>
+                                        <a href="###"><img src="assets/images/facebook.png" alt="facebook-icon"></a>
+                                        <a href="###"><img src="assets/images/pinterest.png" alt="pinterest-icon"></a>
+                                        <a href="###"><img src="assets/images/googleplus.png" alt="googleplus-icon"></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="banner__slide">
+                                <div class="slide__content">
+                                    <img class="section__team__avatar" src="media/mulher2.png" alt="Anna Jhons">
+                                    <div class="section__team__name">Anna Jhons</div>
+                                    <div class="section__team__role">Technical lead</div>
+                                    <div class="section__team__social">
+                                        <a href="###"><img src="assets/images/twitter.png" alt="twitter-icon"></a>
+                                        <a href="###"><img src="assets/images/linkedin.png" alt="linkedin-icon"></a>
+                                        <a href="###"><img src="assets/images/facebook.png" alt="facebook-icon"></a>
+                                        <a href="###"><img src="assets/images/pinterest.png" alt="pinterest-icon"></a>
+                                        <a href="###"><img src="assets/images/googleplus.png" alt="googleplus-icon"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="banner__circles__area banner__circles__area--team">
+                        <div class="banner__circles banner__circles--active"></div>
+                        <div class="banner__circles"></div>
+                        <div class="banner__circles"></div>
                     </div>
                 </div>
             </div>
