happy clients initial

--- a/index.html
+++ b/index.html
@@ -345,6 +345,31 @@
                 </div>
             </div>
         </section>
+        <section class="default default--light testimonials">
+            <div class="section__title">Happy Clients</div>
+            <div class="section__desc">Client Reviews</div>
+            <div class="section__body">
+                <div class="section-testimonials">
+                    <div class="banner__sliders">
+                        <div class="banner__slide">
+                            <div class="slide__content">
+                                <img class="section__testimonials__avatar" src="media/homem2.png" alt="John Doe">
+                                <div class="section__testimonials__name">John Doe</div>
+                                <div class="section__testimonials__role">Head of PR Department</div>
+                                <img class="section__testimonials__quoteimg" src="assets/images/quote.png" alt="quote-img">
+                                <div class="section__testimonials__quote">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.
+                                </div>
+                            </div>
+                        </div>
+                    <div class="banner__circles__area banner__circles__area--testimonials">
+                        <div class="banner__circles banner__circles--active"></div>
+                        <div class="banner__circles"></div>
+                        <div class="banner__circles"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
     <footer>
