--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
                                 </div>
                             </div>
                         </div>
+                    </div>                    
                     <div class="banner__circles__area banner__circles__area--testimonials">
                         <div class="banner__circles banner__circles--active"></div>
                         <div class="banner__circles"></div>
