--- a/index.html
+++ b/index.html
@@ -371,6 +371,30 @@
                 </div>
             </div>
         </section>
+        <section class="default section-companies">
+            <div class="section__body">
+                <div class="companies__area">
+                    <div class="companies__img">
+                        <img src="/media/empresa1.png" alt="">
+                    </div>
+                    <div class="companies__img">
+                        <img src="/media/empresa2.png" alt="">
+                    </div>
+                    <div class="companies__img">
+                        <img src="/media/empresa3.png" alt="">
+                    </div>
+                    <div class="companies__img">
+                        <img src="/media/empresa4.png" alt="">
+                    </div>
+                    <div class="companies__img">
+                        <img src="/media/empresa5.png" alt="">
+                    </div>
+                    <div class="companies__img">
+                        <img src="/media/empresa6.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
     <footer>
