price plans finished

--- a/index.html
+++ b/index.html
@@ -395,6 +395,74 @@
                 </div>
             </div>
         </section>
+        <section class="default default--light default--light--price ">
+            <div class="section__title">Price</div>
+            <div class="section__desc">Pricing table</div>
+            <div class="section__body">
+                <div class="section-price-area">
+                    <div class="section-price-table">
+                        <div class="plans">
+                            <div class="plan__name">Express</div>
+                            <div class="plan__price">$ 9.99</div>
+                            <div class="plan__period">/ Month</div>
+                            <div class="plan__desc">
+                                <h6>Tracking issues</h6>
+                                <h6>Add bugs through email</h6>
+                                <h6>Notifications</h6>
+                                <h6>Time tracking</h6>
+                                <h6>Custom views</h6>
+                            </div>
+                            <button class="button button--plans">Choose</button>
+                        </div>
+                    </div>
+                    <div class="section-price-table">
+                        <div class="plans">
+                            <div class="plan__name">Standart</div>
+                            <div class="plan__price">$ 14.99</div>
+                            <div class="plan__period">/ Month</div>
+                            <div class="plan__desc">
+                                <h6>Tracking issues</h6>
+                                <h6>Add bugs through email</h6>
+                                <h6>Notifications</h6>
+                                <h6>Time tracking</h6>
+                                <h6>Custom views</h6>
+                            </div>
+                            <button class="button button--plans">Choose</button>
+                        </div>
+                    </div>
+                    <div class="section-price-table">
+                        <div class="plans">
+                            <div class="plan__name">Luxe</div>
+                            <div class="plan__price">$ 19.99</div>
+                            <div class="plan__period">/ Month</div>
+                            <div class="plan__desc">
+                                <h6>Tracking issues</h6>
+                                <h6>Add bugs through email</h6>
+                                <h6>Notifications</h6>
+                                <h6>Time tracking</h6>
+                                <h6>Custom views</h6>
+                            </div>
+                            <button class="button button--plans">Choose</button>
+                        </div>
+                    </div>
+                    <div class="section-price-table">
+                        <div class="plans">
+                            <div class="plan__name">Premium</div>
+                            <div class="plan__price">$ 24.99</div>
+                            <div class="plan__period">/ Month</div>
+                            <div class="plan__desc">
+                                <h6>Tracking issues</h6>
+                                <h6>Add bugs through email</h6>
+                                <h6>Notifications</h6>
+                                <h6>Time tracking</h6>
+                                <h6>Custom views</h6>
+                            </div>
+                            <button class="button button--plans">Choose</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
     <footer>
