--- a/index.html
+++ b/index.html
@@ -375,22 +375,22 @@
             <div class="section__body">
                 <div class="companies__area">
                     <div class="companies__img">
-                        <img src="/media/empresa1.png" alt="">
+                        <img src="/media/empresa1.png" alt="empresa1-logo">
                     </div>
                     <div class="companies__img">
-                        <img src="/media/empresa2.png" alt="">
+                        <img src="/media/empresa2.png" alt="empresa2-logo">
                     </div>
                     <div class="companies__img">
-                        <img src="/media/empresa3.png" alt="">
+                        <img src="/media/empresa3.png" alt="empresa3-logo">
                     </div>
                     <div class="companies__img">
-                        <img src="/media/empresa4.png" alt="">
+                        <img src="/media/empresa4.png" alt="empresa4-logo">
                     </div>
                     <div class="companies__img">
-                        <img src="/media/empresa5.png" alt="">
+                        <img src="/media/empresa5.png" alt="empresa5-logo">
                     </div>
                     <div class="companies__img">
-                        <img src="/media/empresa6.png" alt="">
+                        <img src="/media/empresa6.png" alt="empresa6-logo">
                     </div>
                 </div>
             </div>
@@ -457,9 +457,75 @@
                                 <h6>Time tracking</h6>
                                 <h6>Custom views</h6>
                             </div>
-                            <button class="button button--plans">Choose</button>
+                            <button class="button button--plans active-plan">Choose</button>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="default default--light default--light--premiun">
+            <div class="section__title">Premium</div>
+            <div class="section__desc">Even More Features Available</div>
+            <div class="section__body">
+                <div class="section-premiun">
+                    <div class="banner__sliders">
+                        <div class="banner__slide">
+                            <div class="slide__content">
+                                <div class="premiun__area">
+                                    <div class="premiun__left">
+                                        <img src="media/livros.png" alt="books-imagen">
+                                    </div>
+                                    <div class="premiun__right">
+                                        <div class="feature">
+                                            <div class="feature__area">
+                                                <div class="feature_icon">
+                                                    <img src="assets/images/check.png" alt="check-imagen">
+                                                </div>
+                                                <div class="feature__items">
+                                                    <div class="feature_name">First Feature</div>
+                                                    <div class="feature_desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, deleniti</div>
+                                                    <div class="feature_desc">Lorem ipsum dolor sit amet, consectetur adipisicing.</div>
+                                                    <div class="feature__info">
+                                                        <h6>Feature one</h6>
+                                                        <h6>Feature two</h6>
+                                                        <h6>Feature three</h6>
+                                                    </div>
+                                                </div>                                            
+                                            </div> 
+                                        </div>
+                                        <div class="feature">
+                                            <div class="feature__area">
+                                                <div class="feature_icon">
+                                                    <img src="assets/images/check.png" alt="check-imagen">
+                                                </div>
+                                                <div class="feature__items">
+                                                    <div class="feature_name">First Feature</div>
+                                                    <div class="feature_desc">Lorem ipsum dolor sit amet, consectetur adipisicing.</div>                                            
+                                                </div>                                            
+                                            </div> 
+                                        </div>
+                                        <div class="feature">
+                                            <div class="feature__area">
+                                                <div class="feature_icon">
+                                                    <img src="assets/images/check.png" alt="check-imagen">
+                                                </div>
+                                                <div class="feature__items">
+                                                    <div class="feature_name">First Feature</div>
+                                                    <div class="feature_desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, deleniti</div>                                                    
+                                                </div>                                            
+                                            </div> 
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                    
+                    <div class="banner__circles__area banner__circles__area--testimonials">
+                        <div class="banner__circles banner__circles--active"></div>
+                        <div class="banner__circles"></div>
+                        <div class="banner__circles"></div>
+                    </div>
+                    <button class="button">Get in touch</button>
                 </div>
             </div>
         </section>
