some facts finished

--- a/index.html
+++ b/index.html
@@ -520,12 +520,40 @@
                             </div>
                         </div>
                     </div>                    
-                    <div class="banner__circles__area banner__circles__area--testimonials">
+                    <div class="banner__circles__area banner__circles__area--premiun">
                         <div class="banner__circles banner__circles--active"></div>
                         <div class="banner__circles"></div>
                         <div class="banner__circles"></div>
                     </div>
                     <button class="button">Get in touch</button>
+                </div>
+            </div>
+        </section>
+        <section class="default default--dark">
+            <div class="section__title">Some Facts</div>
+            <div class="section__desc">About our work</div>
+            <div class="section__body">
+                <div class="section-facts">
+                    <div class="section__fact">
+                        <div class="fact__line1">1000</div>
+                        <div class="fact__line2">Design projects <br/> released</div>
+                        <div class="fact__line3">Lorem ipsum dolor sit <br/> amet consectetur adipisicing elit. Pariatur.</div>
+                    </div>
+                    <div class="section__fact">
+                        <div class="fact__line1">900</div>
+                        <div class="fact__line2">Photos <br/><br/></div>
+                        <div class="fact__line3">Lorem ipsum dolor sit <br/> amet consectetur adipisicing elit. Pariatur.</div>
+                    </div>
+                    <div class="section__fact">
+                        <div class="fact__line1">500</div>
+                        <div class="fact__line2">Marketing <br/> Ideas</div>
+                        <div class="fact__line3">Lorem ipsum dolor sit <br/> amet consectetur adipisicing elit. Pariatur.</div>
+                    </div>
+                    <div class="section__fact">
+                        <div class="fact__line1">100</div>
+                        <div class="fact__line2">Exhibitions<br/><br/></div>
+                        <div class="fact__line3">Lorem ipsum dolor sit <br/> amet consectetur adipisicing elit. Pariatur.</div>
+                    </div>
                 </div>
             </div>
         </section>
